@@ -3,9 +3,12 @@ package net.automaters.activities.skills.mining;
 import lombok.Getter;
 import net.automaters.api.entities.LocalPlayer;
 import net.automaters.api.walking.Area;
+import net.runelite.api.GameObject;
 import net.runelite.api.Skill;
 import net.runelite.api.TileObject;
+import net.unethicalite.api.entities.Players;
 import net.unethicalite.api.entities.TileObjects;
+import net.unethicalite.api.game.Game;
 import net.unethicalite.api.game.Skills;
 
 import java.util.Arrays;
@@ -20,8 +23,8 @@ public class Ores {
     @Getter
     public enum OreType {
         BRONZE(Arrays.asList("Copper rocks", "Tin rocks"),  1, false, Locations.Bronze.class),
-        IRON(Arrays.asList("Iron rocks"), 15, false, Locations.Iron.class),
-        COAL(Arrays.asList("Coal rocks"), 99, false, Locations.Coal.class),
+        IRON(List.of("Iron rocks"), 15, false, Locations.Iron.class),
+        COAL(List.of("Coal rocks"), 99, false, Locations.Coal.class),
         ;
 
         private final List<String> oreName;
@@ -51,50 +54,63 @@ public class Ores {
     }
 
 
-    public static TileObject getFurtherOre() {
+    public static GameObject getFurtherOre() {
         OreType chosenOreType = chooseOreType();
-        TileObject ore = null;
+
         if (chosenOreType != null) {
             List<String> oreNames = chosenOreType.getOreName();
             debug("Selected Ore Names: " + oreNames);
 
-            for (String oreName : oreNames) {
-                TileObject oreObject = TileObjects.getNearest(LocalPlayer.getPosition(), oreName);
+            GameObject closestDistantOre = null;
+            double closestDistance = Double.MAX_VALUE;
+            double minDistance = 3; // Minimum distance to consider
 
-                if (oreObject != null) {
-                    if (ore == null || oreObject.distanceTo(localPlayer) > 3) {
-                        ore = oreObject;
+            for (String oreName : oreNames) {
+
+                for (TileObject oreObject : TileObjects.getSurrounding(Players.getLocal().getWorldLocation(), 12, oreName)) {
+                    if (oreObject instanceof GameObject) {
+                        double distance = oreObject.distanceTo(localPlayer);
+
+                        if (distance >= minDistance && distance < closestDistance) {
+                            closestDistantOre = (GameObject) oreObject;
+                            closestDistance = distance;
+                            debug("Distant Ore location: " + oreObject.getWorldLocation().toString());
+                        }
                     }
                 }
             }
-            debug("further ore location: "+ore.getWorldLocation().toString());
-
-            return ore;
+            debug("Distant Ore location: " + closestDistantOre.getWorldLocation().toString());
+            return closestDistantOre;
         } else {
             debug("No suitable ore type found.");
             return null;
         }
     }
 
-    public static TileObject getOre() {
+    public static GameObject getOre() {
         OreType chosenOreType = chooseOreType();
-        TileObject ore = null;
+
         if (chosenOreType != null) {
             List<String> oreNames = chosenOreType.getOreName();
-            debug("Selected Ore Names: " + oreNames);
+
+            GameObject closestOre = null;
+            double closestDistance = Double.MAX_VALUE;
 
             for (String oreName : oreNames) {
                 TileObject oreObject = TileObjects.getNearest(LocalPlayer.getPosition(), oreName);
+                if (oreObject instanceof GameObject) {
+                    double distance = oreObject.distanceTo(localPlayer);
 
-                if (oreObject != null) {
-                    if (ore == null || oreObject.distanceTo(localPlayer) < ore.distanceTo(localPlayer)) {
-                        ore = oreObject;
-                        debug("ore location: "+ore.getWorldLocation().toString());
+                    if (distance < closestDistance) {
+                        closestOre = (GameObject) oreObject;
+                        closestDistance = distance;
                     }
                 }
             }
 
-            return ore;
+
+
+            return closestOre;
         } else {
             debug("No suitable ore type found.");
             return null;
